--- a/styles.css
+++ b/styles.css
@@ -79,25 +79,6 @@ p {
 	}
 }
 
-.btn {
-	text-transform: uppercase;
-	background: transparent;
-	color: #222;
-	padding: 0.375rem 0.75rem;
-	letter-spacing: .25rem;
-	display: inline-block;
-	transition: all .3s linear;
-	font-size: 0.875rem;
-	border: 2px solid #222;
-	cursor: pointer;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-	border-radius: .5rem;
-}
-.btn:hover {
-	color: #fff;
-	background: #222;
-}
-
 .section {
 	padding: 5rem 0;
 }
@@ -131,13 +112,13 @@ p {
 }
 .filter-btn {
 	background: transparent;
-	font-size: 1rem;
+	font-size: .7rem;
 	border: #c59d5f solid 1px;
 	text-transform: capitalize;
-	margin: 0 0.5rem;
+	margin: 0 0.2rem;
 	letter-spacing: 1px;
 	border-radius: .5rem;
-	padding: 0.375rem 0.75rem;
+	padding: 0.375rem 0.5rem;
 	color: #c59d5f;
 	cursor: pointer;
 	transition: all .3s linear;
@@ -199,6 +180,11 @@ p {
 	.sectionTwo {
 		width: 95vw;
 		max-width: 1000px;
+	}
+	.filter-btn {
+		padding: .375 .75rem;
+		margin: 0 0.5;
+		font-size: 1rem;
 	}
 }
 @media screen and (min-width: 1200px) {
