--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,14 @@ body {
 	justify-content: center;
 }
 .video-container {
+	background-color: #222;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 
-	object-fit: cover;
+	object-fit: contain;
 	z-index: -2;
 }
 #descriptive {
@@ -44,7 +45,8 @@ body {
 	content: "Our mission is to simply make you feel home.";
 	font-size: .7rem;
 	font-family: "Roboto", sans-serif;
-	color: #fff;
+
+	color: #c59d5f;
 }
 
 #descriptive::before {
@@ -54,18 +56,24 @@ body {
 	left: 0;
 	width: 100%;
 	height: 4rem;
-	background: rgba(0, 0, 0, 0.3);
+	background: rgba(0, 0, 0, 0.4);
 	z-index: -1;
+	display: none;
 }
 @media screen and (min-width: 800px) {
 	#descriptive {
 		font-size: 2.9rem;
+		top: 6rem;
 	}
 	#descriptive::before {
-		height: 5rem;
+		display: block;
 	}
 	#descriptive::after {
 		font-size: .9rem;
+		color: #fff;
+	}
+	.video-container {
+		object-fit: cover;
 	}
 }
 
