--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 .first-header {
 	min-height: 100vh;
 	position: relative;
-	display: flex;
+	display: none;
 	justify-content: center;
 }
 .video-container {
@@ -61,6 +61,9 @@ body {
 	display: none;
 }
 @media screen and (min-width: 800px) {
+	.first-header {
+		display: flex;
+	}
 	#descriptive {
 		font-size: 2.9rem;
 		top: 6rem;
